# diagonal-b6

./: .editorconfig  .envrc  .gcloudignore  .gitignore  CHANGELOG.md  Makefile  README  README.md  flake.nix
.github/workflows/: build-latest-image.yaml  ci-nix.yaml  ci-plain.yaml  publish-docker-images.yaml  publish-images.yaml  publish-to-pypi.yaml  publish-to-pypi.yaml.disabled  test.yaml
data/tests/: .gitignore  camden.osm.pbf  colour-areas.geojson  granary-square.geojson  lsoa-camden.dbf  (+10 more)
docker/: .gitignore  Dockerfile  Dockerfile.b6  Dockerfile.b6-build.inc  Dockerfile.b6-ci.inc  Dockerfile.b6.inc  Dockerfile.build
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
etc/: b6build-nightly-notifier.yaml  b6build-nightly-template.json  baseline-ui.yaml  cloudbuild.nightly.yaml  cloudbuild.skyline.yaml  cloudbuild.yaml  pre-commit
frontend/: .env.development  .env.production  .eslintrc.cjs  .gitignore  .prettierrc  .svgrrc  Makefile  README.md  index-vite.html  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
nix/: docker.nix  go.nix  js.nix  python.nix  treefmt.nix
proto/: api.proto  compact.proto  features.proto  geometry.proto  tiles.proto  ui.proto
python/: .gitignore  README.md  pyproject.toml  pyproject.toml.template
python/diagonal_b6/: .gitignore  __init__.py  b6_test.py  collection.py  connect.py  expression.py  features.py  generate_api.py  geometry.py  query.py
python/docs/: 01_Search.ipynb  env.yml
scripts/: api-docs-to-docusaurus.py  make-in-docker.sh
(+809 files in other folders)
